# jsut

./: .gitignore  README.md  dev.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
PyTorch/dataset/: spectrogram.py
jsut/: corpus.py  fs.py
jsut/PyTorch/Lightning/datamodule/: spectrogram.py  waveform.py
jsut/PyTorch/dataset/: spectrogram.py  waveform.py
npVCC2016/PyTorch/Lightning/datamodule/: spectrogram.py
npVCC2016/PyTorch/dataset/: waveform.py
npvcc2016/: corpus.py  fs.py
npvcc2016/PyTorch/Lightning/datamodule/: spectrogram.py  waveform.py
npvcc2016/PyTorch/dataset/: fs.py  spectrogram.py  waveform.py
