[tool.poetry]
name = "npvcc2016"
version = "1.2.2"
description = "npvcc2016: Python loader of npVCC2016 speech corpus"
authors = ["Tarepan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarepan/npVCC2016"


[tool.poetry.dependencies]
python = "^3.6.1"
torch = "*"
torchaudio = "^0.7.0"
pytorch-lightning = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
