[tool.poetry]
name = "npvcc2016"
version = "3.0.0"
description = "npvcc2016: Python loader of npVCC2016 speech corpus"
authors = ["Tarepan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarepan/npVCC2016"


[tool.poetry.dependencies]
python = "^3.6.1"
torch = "*"
torchaudio = "^0.7.0"
pytorch-lightning = "^1.0.6"
fsspec = {extras = ["s3"], version = "^0.8.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
