[tool.poetry]
name = "jsut"
version = "0.0.1"
description = "jsut - Python loader of JSUT corpus"
authors = ["Tarepan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarepan/jsut"


[tool.poetry.dependencies]
python = "^3.6.1"
torch = "*"
torchaudio = "^0.7.0"
pytorch-lightning = "^1.0.6"
fsspec = {extras = ["s3"], version = "^0.8.4"}
corpuspy = {git = "https://github.com/tarepan/corpuspy", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
