[metadata]
name = npVCC2016
version = 1.0.0
url = https://github.com/tarepan/npVCC2016
author = Tarepan
license_file = LICENSE
description = npVCC2016: Python loader of npVCC2016 speech corpus
long_description = file: README.md
classifiers=
    # Specify the Python versions you support here. In particular, ensure
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    torch
    torchaudio
    pytorch-lightning

